some styles added

--- a/js/module-02/index.html
+++ b/js/module-02/index.html
@@ -21,9 +21,13 @@
           массива ['Mango', 'Poly', 'Ajax'] с индексом 0 будет выведено '1 -
           Mango', а для индекса 2 выведет '3 - Ajax'. const logItems =
           function(array) { // твой код }; /* * Вызовы функции для проверки
-          работоспособности твоей реализации. */ logItems(['Mango', 'Poly',
-          'Ajax', 'Lux', 'Jay', 'Kong']); logItems([5, 10, 15, 20, 25, 30, 35,
-          40, 45, 50]);
+          работоспособности твоей реализации. */
+          <span class="check"
+            >logItems(['Mango', 'Poly', 'Ajax', 'Lux', 'Jay', 'Kong']);</span
+          >
+          <span class="check"
+            >logItems([5, 10, 15, 20, 25, 30, 35, 40, 45, 50]);</span
+          >
         </p>
         <button class="btn" id="task-one">Run script</button>
       </section>
@@ -36,14 +40,23 @@
           гравировки одного слова, и возвращающую цену гравировки всех слов в
           строке. const calculateEngravingPrice = function(message,
           pricePerWord) { // твой код }; /* * Вызовы функции для проверки
-          работоспособности твоей реализации. */ console.log(
-          calculateEngravingPrice( 'Proin sociis natoque et magnis parturient
-          montes mus', 10, ), ); // 80 console.log( calculateEngravingPrice(
-          'Proin sociis natoque et magnis parturient montes mus', 20, ), ); //
-          160 console.log( calculateEngravingPrice('Donec orci lectus aliquam
-          est magnis', 40), ); // 240 console.log(
-          calculateEngravingPrice('Donec orci lectus aliquam est magnis', 20),
-          ); // 120
+          работоспособности твоей реализации. */
+          <span class="check"
+            >console.log( calculateEngravingPrice( 'Proin sociis natoque et
+            magnis parturient montes mus', 10, )); // 80</span
+          >
+          <span class="check"
+            >console.log( calculateEngravingPrice( 'Proin sociis natoque et
+            magnis parturient montes mus', 20, )); // 160
+          </span>
+          <span class="check"
+            >console.log( calculateEngravingPrice('Donec orci lectus aliquam est
+            magnis', 40)); // 240
+          </span>
+          <span class="check"
+            >console.log( calculateEngravingPrice('Donec orci lectus aliquam est
+            magnis', 20)); // 120</span
+          >
         </p>
         <button class="btn" id="task-two">Run script</button>
       </section>
@@ -55,10 +68,17 @@
           возвращает самое длинное слово в этой строке. const findLongestWord =
           function(string) { // твой код }; /* * Вызовы функции для проверки
           работоспособности твоей реализации. */
-          console.log(findLongestWord('The quick brown fox jumped over the lazy
-          dog')); // 'jumped' console.log(findLongestWord('Google do a roll'));
-          // 'Google' console.log(findLongestWord('May the force be with you'));
-          // 'force'
+          <span class="check"
+            >console.log(findLongestWord('The quick brown fox jumped over the
+            lazy dog')); // 'jumped'
+          </span>
+          <span class="check"
+            >console.log(findLongestWord('Google do a roll')); // 'Google'
+          </span>
+          <span class="check"
+            >console.log(findLongestWord('May the force be with you')); //
+            'force'</span
+          >
         </p>
         <button class="btn" id="task-three">Run script</button>
       </section>
@@ -72,13 +92,23 @@
           конец строки троеточие '...', после чего возвращает укороченную
           версию. const formatString = function(string) { // твой код }; /* *
           Вызовы функции для проверки работоспособности твоей реализации. */
-          console.log(formatString('Curabitur ligula sapien, tincidunt non.'));
-          // вернется оригинальная строка console.log(formatString('Vestibulum
-          facilisis, purus nec pulvinar iaculis.')); // вернется форматированная
-          строка console.log(formatString('Curabitur ligula sapien.')); //
-          вернется оригинальная строка console.log( formatString( 'Nunc sed
-          turpis. Curabitur a felis in nunc fringilla tristique.', ), ); //
-          вернется форматированная строка
+          <span class="check"
+            >console.log(formatString('Curabitur ligula sapien, tincidunt
+            non.')); // вернется оригинальная строка
+          </span>
+          <span class="check"
+            >console.log(formatString('Vestibulum facilisis, purus nec pulvinar
+            iaculis.')); // вернется форматированная строка
+          </span>
+          <span class="check"
+            >console.log(formatString('Curabitur ligula sapien.')); // вернется
+            оригинальная строка
+          </span>
+          <span class="check"
+            >console.log( formatString( 'Nunc sed turpis. Curabitur a felis in
+            nunc fringilla tristique.', ), ); // вернется форматированная
+            строка</span
+          >
         </p>
         <button class="btn" id="task-four">Run script</button>
       </section>
@@ -91,10 +121,21 @@
           слов нет функция возвращает false. Слова в строке могут быть в
           произвольном регистре. const checkForSpam = function(message) { //
           твой код }; /* * Вызовы функции для проверки работоспособности твоей
-          реализации. */ console.log(checkForSpam('Latest technology news')); //
-          false console.log(checkForSpam('JavaScript weekly newsletter')); //
-          false console.log(checkForSpam('Get best sale offers now!')); // true
-          console.log(checkForSpam('[SPAM] How to earn fast money?')); // true
+          реализации. */
+          <span class="check"
+            >console.log(checkForSpam('Latest technology news')); // false
+          </span>
+          <span class="check"
+            >console.log(checkForSpam('JavaScript weekly newsletter')); // false
+          </span>
+          <span class="check"
+            >console.log(checkForSpam('Get best sale offers now!')); //
+            true</span
+          >
+          <span class="check"
+            >console.log(checkForSpam('[SPAM] How to earn fast money?')); //
+            true</span
+          >
         </p>
         <button class="btn" id="task-five">Run script</button>
       </section>
@@ -151,20 +192,24 @@
           и isLoginValid в нашем случае. isLoginUnique только проверяет есть ли
           такой логин в массиве и возвращает true или false. isLoginValid только
           проверяет валидный ли логин и возвращает true или false. addLogin
-          добавляет или не добавляет логин в массив. При этом для проверок
-          условия добавления использует результаты вызовов других функций -
-          isLoginUnique и isLoginValid. const logins = ['Mango', 'robotGoogles',
-          'Poly', 'Aj4x1sBozz', 'qwerty123']; const isLoginValid =
-          function(login) { // твой код }; const isLoginUnique =
-          function(allLogins, login) { // твой код }; const addLogin =
-          function(allLogins, login) { // твой код }; /* * Вызовы функции для
+          добавляет или не добавляет логин в массив. * Вызовы функции для
           проверки работоспособности твоей реализации. */
-          console.log(addLogin(logins, 'Ajax')); // 'Логин успешно добавлен!'
-          console.log(addLogin(logins, 'robotGoogles')); // 'Такой логин уже
-          используется!' console.log(addLogin(logins, 'Zod')); // 'Ошибка! Логин
-          должен быть от 4 до 16 символов' console.log(addLogin(logins,
-          'jqueryisextremelyfast')); // 'Ошибка! Логин должен быть от 4 до 16
-          символов'
+          <span class="check"
+            >console.log(addLogin(logins, 'Ajax')); // 'Логин успешно
+            добавлен!'</span
+          >
+          <span class="check"
+            >console.log(addLogin(logins, 'robotGoogles')); // 'Такой логин уже
+            используется!'
+          </span>
+          <span class="check"
+            >console.log(addLogin(logins, 'Zod')); // 'Ошибка! Логин должен быть
+            от 4 до 16 символов'
+          </span>
+          <span class="check"
+            >console.log(addLogin(logins, 'jqueryisextremelyfast')); // 'Ошибка!
+            Логин должен быть от 4 до 16 символов'</span
+          >
         </p>
         <button class="btn" id="task-seven">Run script</button>
       </section>
